Fix links carrello
dovevo farli reeeee

--- a/carrello.html
+++ b/carrello.html
@@ -44,30 +44,30 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Missione circumlunare</a>
+                    <a href="esperienza.html">Missione circumlunare</a>
                   </li>
                   <li>
-                    <a href="#">Volo a gravità zero</a>
+                    <a href="esperienza.html">Volo a gravità zero</a>
                   </li>
                   <li>
-                    <a href="#">Addestramento da astronauta</a>
+                    <a href="esperienza.html">Addestramento da astronauta</a>
                   </li>
                   <li>
-                    <a href="#">Visita la stazione spaziale</a>
+                    <a href="esperienza.html">Visita la stazione spaziale</a>
                   </li>
                   <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
+                    <a href="esperienza.html">Assisti ad un lancio spaziale</a>
                   </li>
                   <li role="separator" class="divider"></li>
                   <li class="dropdown-header">Altre esperienze</li>
                   <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
+                    <a href="esperienza.html">Assisti ad un lancio spaziale</a>
                   </li>
                   <li>
-                    <a href="#">Scopri le nostre tecnologie</a>
+                    <a href="esperienza.html">Scopri le nostre tecnologie</a>
                   </li>
                   <li>
-                    <a href="#">Sicurezza</a>
+                    <a href="esperienza.html">Sicurezza</a>
                   </li>
                 </ul>
               </li>
@@ -86,7 +86,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Foto gallery</a>
+                    <a href="foto.html">Foto gallery</a>
                   </li>
                   <li>
                     <a href="#">Video gallery</a>
@@ -95,7 +95,7 @@
               </li>
               <!-- Partners -->
               <li>
-                <a href="#about">Partners</a>
+                <a href="partners.html">Partners</a>
               </li>
               <!-- Chi siamo -->
               <li class="dropdown">
@@ -104,10 +104,10 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Vision</a>
+                    <a href="vision.html">Vision</a>
                   </li>
                   <li>
-                    <a href="#">Storia</a>
+                    <a href="storia.html">Storia</a>
                   </li>
                   <li>
                     <a href="#">Il Team</a>
@@ -124,7 +124,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a href="#">Scrivici</a>
+                    <a href="scrivici.html">Scrivici</a>
                   </li>
                   <li>
                     <a href="#">Dove trovarci</a>
