--- a/esperienza_logged.html
+++ b/esperienza_logged.html
@@ -242,7 +242,7 @@
 									</div>
 									<div class="col-md-6">
                                         <h2>Prezzo</h2>
-                                        <p>Tariffa standard compresinva di tutte le spese: 5.000.0000 USD$</p>
+                                        <p>Tariffa standard comprensiva di tutte le spese: 5.000.000 USD$</p>
 									</div>
 							</div>
 					</div>
