--- a/esperienze.html
+++ b/esperienze.html
@@ -182,7 +182,7 @@
 			</ol>
 
 			<div class="panel panel-default marketing">
-				<header class="container-heading well">
+				<header class="panel-heading well">
 					<h1>Le nostre esperienze</h1>
 					<p class="lead">Shroom Space ti offre dei momenti indimenticabili!</p>
 				</header>
