--- a/foto.html
+++ b/foto.html
@@ -175,169 +175,176 @@
 		</div>
 	</nav>
 
-	<header class="container">
+	<main class="container">
+
 		<ol class="breadcrumb">
 			<li><a href="index.html">Home</a></li>
 			<li class="active">Foto Gallery</li>
 		</ol>
-		<h1>
-		<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
-			Space Shroom Foto Gallery
-		</h1>
-		<p class="lead">Galleria delle nostre foto.</p>
-	</header>
 
+		<div class="panel panel-default">
+			<header class="panel-heading">
+				<h1>
+				<!-- <i class="fa fa-camera-retro" aria-hidden="true"></i> -->
+					Space Shroom Foto Gallery
+				</h1>
+				<p class="lead">Galleria delle nostre foto.</p>
+			</header>
 
-
-	<section class="container">
-			<div class="container">
-				<button class="btn btn-primary btn-md" data-toggle="collapse" data-target="#filter">Filtra</button>
-				<div id="filter" class="collapse">
-					<div class="jumbotron">
+			<div class="panel-body">
+				<div class="panel panel-info">
+					<div class="panel-heading">
+						<button class="btn btn-primary" data-toggle="collapse" data-target="#filter">Esegui un filtro di ricerca</button>
+					</div>
+					<div id="filter" class="panel-collapse collapse">
+						<div class="panel-body">
 							<div class="row">
-									<div class="col-md-6">
-											<p>Che cosa ti interessa?</p>
-											<div class="checkbox">
-													<label><input type="checkbox" value="" checked>Space</label>
-											</div>
-											<div class="checkbox">
-													<label><input type="checkbox" value="">Universe</label>
-											</div>
-											<div class="checkbox">
-													<label><input type="checkbox" value="" checked>Astronauts</label>
-											</div>
-											<div class="checkbox">
-													<label><input type="checkbox" value="" checked>Earth</label>
-											</div>
-											<div class="checkbox">
-													<label><input type="checkbox" value="">Flight</label>
-											</div>
-											<div class="checkbox">
-													<label><input type="checkbox" value="">Sky</label>
-											</div>
+								<div class="col-md-6">
+									<p>Che cosa ti interessa?</p>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Space</label>
 									</div>
-									<div class="col-md-6">
-										<a href="fotofiltrato.html"><button class="btn btn-success btn-lg">Applica</button></a>
+									<div class="checkbox">
+										<label><input type="checkbox" value="">Universe</label>
 									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Astronauts</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="" checked>Earth</label>
+									</div>
+									<div class="checkbox">
+											<label><input type="checkbox" value="">Flight</label>
+									</div>
+									<div class="checkbox">
+										<label><input type="checkbox" value="">Sky</label>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<a href="fotofiltrato.html"><button class="btn btn-success btn-lg">Applica</button></a>
+								</div>
 							</div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<br>
+
+			<section class="panel-body">
+				<div class="row">
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="foto1.html">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption pull">
+								<small> Tags:</small>
+								<span class="btn label label-primary">Space</span>
+								<span class="btn label label-default">Universe</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Astronauts</span>
+								<span class="btn label label-primary">Space</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-success">Earth</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-success">Earth</span>
+								<span class="btn label label-warning">Flight</span>
+								<span class="btn label label-primary">Space</span>
+								<span class="btn label label-default">Universe</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-info">Sky</span>
+								<span class="btn label label-success">Earth</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-sm-6">
+						<div class="thumbnail">
+							<a href="#">
+								<img src="img/img3.jpg" alt="">
+							</a>
+							<div class="caption">
+								<small> Tags:</small>
+								<span class="btn label label-danger">Food</span>
+								<span class="btn label label-primary">Ipsum</span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 
 		</div>
-		<div class="row">
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="foto1.html">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption pull">
-						<small> Tags:</small>
-						<span class="btn label label-primary">Space</span>
-						<span class="btn label label-default">Universe</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-danger">Astronauts</span>
-						<span class="btn label label-primary">Space</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-success">Earth</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-success">Earth</span>
-						<span class="btn label label-warning">Flight</span>
-						<span class="btn label label-primary">Space</span>
-						<span class="btn label label-default">Universe</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-info">Sky</span>
-						<span class="btn label label-success">Earth</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-danger">Food</span>
-						<span class="btn label label-primary">Ipsum</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-danger">Food</span>
-						<span class="btn label label-primary">Ipsum</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-danger">Food</span>
-						<span class="btn label label-primary">Ipsum</span>
-					</div>
-				</div>
-			</div>
-			<div class="col-lg-4 col-sm-6">
-				<div class="thumbnail">
-					<a href="#">
-						<img src="img/img3.jpg" alt="">
-					</a>
-					<div class="caption">
-						<small> Tags:</small>
-						<span class="btn label label-danger">Food</span>
-						<span class="btn label label-primary">Ipsum</span>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	</main>
 
 	<footer class="footer">
 		<nav class="navbar-inverse">
