--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 </li>
               </ul>
             </li>
-            <!-- Contattaci -->
+            <!-- Contatti -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contatti
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -130,14 +130,11 @@
                 </li>
               </ul>
             </li>
-            <!-- Ricerca -->
-            <li>
-              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-            </li>
             <!-- Login form -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                <span class="caret"></span>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Login</span>
               </a>
               <ul id="login-dp" class="dropdown-menu">
                 <li>
@@ -169,6 +166,13 @@
                   </div>
                 </li>
               </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html">
+                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                <span class="hidden-sm hidden-md hidden-lg"> Cerca nel sito</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -221,36 +225,54 @@
 				</a>
 			</section>
 
-			<section class="embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-			</section>
+      <hr>
 
-			<section class="container">
+      <section class="container">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </div>
+      </section>
+			
+      <hr>
+      
+      <section class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1>News Recenti</h1>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1>News Recenti</h1>
+              </div>
 
-            <h2>Subheading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+              <div class="panel-body">
+                <h2>Subheading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-            <h2>Subheading</h2>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                <h2>Subheading</h2>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-            <h2>Subheading</h2>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <h2>Subheading</h2>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              </div>
+            </div>
           </div>
 
           <div class="col-md-6">
-            <h1>Novità dal blog</h1>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1>Novità dal blog</h1>
+              </div>
 
-            <h2>Subheading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+              <div class="panel-body">
+                <h2>Subheading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-            <h2>Subheading</h2>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                <h2>Subheading</h2>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-            <h2>Subheading</h2>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <h2>Subheading</h2>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
