--- a/indexlogged.html
+++ b/indexlogged.html
@@ -18,6 +18,7 @@
 	</head>
 
 	<body>
+
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -198,36 +199,54 @@
 				</a>
 			</section>
 
-			<section class="embed-responsive embed-responsive-16by9">
-				<iframe class="embed-responsive-item" width="854" height="480" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
-			</section>
+      <hr>
 
-			<section class="container">
+      <section class="container">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/RtU_mdL2vBM" frameborder="0" gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <hr>
+
+      <section class="container">
         <div class="row">
           <div class="col-md-6">
-            <h1>News Recenti</h1>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1>News Recenti</h1>
+              </div>
 
-            <h2>Subheading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+              <div class="panel-body">
+                <h2>Subheading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-            <h2>Subheading</h2>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                <h2>Subheading</h2>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-            <h2>Subheading</h2>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <h2>Subheading</h2>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              </div>
+            </div>
           </div>
 
           <div class="col-md-6">
-            <h1>Novità dal blog</h1>
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h1>Novità dal blog</h1>
+              </div>
 
-            <h2>Subheading</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+              <div class="panel-body">
+                <h2>Subheading</h2>
+                <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
 
-            <h2>Subheading</h2>
-            <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
+                <h2>Subheading</h2>
+                <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
 
-            <h2>Subheading</h2>
-            <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+                <h2>Subheading</h2>
+                <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
