Bottoni messi a inizio pagina

--- a/esperienza2.html
+++ b/esperienza2.html
@@ -136,7 +136,7 @@
             </li>
             <!-- Utente -->
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Benvenuto, user!
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
@@ -160,8 +160,17 @@
                         <li><a href="esperienze_logged.html">Esperienze</a></li>
                         <li class="active">Esperienza</li>
                 </ol>
+                <div class="col-md-6">
                 <h1>Missione circumlunare</h1>
-                <h3>Solo 24 persone hanno lasciato l'orbita terrestre e si sono avventurate verso la Luna. Le ultime persone ad aver toccato il suolo lunare furono Gene Cernan e Harrison Schmitt, che lo abbandonarono il 14 Dicembre 1972 per tornare sulla Terra grazie alla nave Apollo. Nessuno è più stato così vicino alla Luna. Noi cambieremo tutto ciò.</h3>
+                <p>Solo 24 persone hanno lasciato l'orbita terrestre e si sono avventurate verso la Luna. Le ultime persone ad aver toccato il suolo lunare furono Gene Cernan e Harrison Schmitt, che lo abbandonarono il 14 Dicembre 1972 per tornare sulla Terra grazie alla nave Apollo. Nessuno è più stato così vicino alla Luna. Noi cambieremo tutto ciò.</p>
+
+              </div>
+              <div class="col-md-6">
+                <h2>Acquista</h2>
+                <p>Unisciti a noi e diventa un pioniere dell'orlo esterno.</p>
+                <p>Effettua il log-in oppure registra un account in pochi minuti per procedere con l'acquisto.</p>
+                <a href="carrello.html"><button class="btn btn-primary btn-lg">Registrati ora</button></a>
+              </div>
                 <div class="row">
                     <div class="col-md-6">
                         
@@ -172,6 +181,7 @@
                     </div>
                 </div>
             </div>
+            <br>
 			<section id="myCarousel" class="carousel slide" data-ride="carousel">
 				<!-- Indicators -->
 				<ol class="carousel-indicators">
@@ -238,15 +248,7 @@
             <p>Tariffa standard comprensiva di tutte le spese: 5.000.000 USD$</p>
           </div>  
         </div>
-        <br>
-        <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-8 text-center">
-
-            <a href="registrazione.html"><button class="btn btn-success btn-lg">Registrati per acquistare</button></a>
-        </div>
-        </div>            
-      </div>          
+                
 
       </section>
 		</main>
