--- a/blog2.html
+++ b/blog2.html
@@ -173,72 +173,80 @@
         </div>
       </div>
     </nav>
-    
-    <header class="container">
+
+    <main class="container">
+
       <ol class="breadcrumb">
 				<li><a href="index.html">Home</a></li>
 				<li class="active">Blog</li>
 			</ol>
-      <h1>Space Shroom Blog</h1>
-      <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
-    </header>
 
-    <main class="container">
-      <div class="row">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <header class="container">
+            <h1>Space Shroom Blog</h1>
+            <p class="lead">Il Blog ufficiale riguardo le ultime curiosità dallo spazio.</p>
+          </header>
+        </div>
 
-        <section class="col-sm-9">
-          <div class="panel panel-default list-group">
-            <nav class="panel-heading" aria-label="Page navigation" align="center">
-              <ul class="pagination">
-                <li><a href="blog.html">1</a></li>
-                <li class="active"><a href="#">2</a></li>
-              </ul>
-            </nav>
+        <nav class="panel-body" aria-label="Page navigation">
+          <ul class="pagination">
+            <li><a href="blog.html">1</a></li>
+            <li class="active"><a href="#">2</a></li>
+          </ul>
+        </nav>
 
-            <article class="list-group-item">
-              <h2>
-                <img src="img/masseffect.jpg" width="100" height="50" alt="trumpet"/>
-                <strong>Viaggi nell'iperspazio in arrivo?</strong>
-              </h2>
-              <hr>
-              <p>Novembre 27, 2017 da <a href="#">Doc</a></p>
-              <p>I portali galattici sono dispositivi di trasporto di massa sparsi in tutta la galassia, si trovano di solito all'interno di sistemi stellari. Essi formano una rete enorme che permette i viaggi interstellari. Considerato come uno dei più grandi successi degli estinti Prothean, un portale galattico può trasportare istantaneamente una nave spaziale ad un altro portale all'interno della rete, consentendo viaggi che altrimenti richiederebbero anni o addirittura secoli con soli motori iperluce.</p>
-              <p>I portali galattici, nonostante la credenza comune, sono stati creati non dai Prothean, bensì dai Razziatori. Come affermato dalla Sovereign, i Prothean erano solo una delle tante razze aliene che hanno trovato i portali e la Cittadella e li hanno sfruttati. Quando i Razziatori spazzarono via i Prothean, le Asari furono la razza successiva a trovare i portali migliaia di anni dopo. Secondo la Sovereign, tramite i portali, le civiltà galattiche si evolvono lungo i binari stabiliti dai Razziatori. Inoltre, i portali servono per accelerare il tasso al quale queste civiltà progrediscono, accorciando il tempo tra le mietiture dei Razziatori.
+        <div class="panel-body">
+          <div class="row">
+            <section class="col-sm-9">
+              <article class="panel panel-default">
+                <header class="panel-heading">
+                  <h2>
+                    <img src="img/masseffect.jpg" width="100" height="50" alt="trumpet"/>
+                    <strong>Viaggi nell'iperspazio in arrivo?</strong>
+                  </h2>
+                </header>
+                <div class="panel-body">
+                  <p>Novembre 27, 2017 da <a href="#">Doc</a></p>
+                  <p>I portali galattici sono dispositivi di trasporto di massa sparsi in tutta la galassia, si trovano di solito all'interno di sistemi stellari. Essi formano una rete enorme che permette i viaggi interstellari. Considerato come uno dei più grandi successi degli estinti Prothean, un portale galattico può trasportare istantaneamente una nave spaziale ad un altro portale all'interno della rete, consentendo viaggi che altrimenti richiederebbero anni o addirittura secoli con soli motori iperluce.</p>
+                  <p>I portali galattici, nonostante la credenza comune, sono stati creati non dai Prothean, bensì dai Razziatori. Come affermato dalla Sovereign, i Prothean erano solo una delle tante razze aliene che hanno trovato i portali e la Cittadella e li hanno sfruttati. Quando i Razziatori spazzarono via i Prothean, le Asari furono la razza successiva a trovare i portali migliaia di anni dopo. Secondo la Sovereign, tramite i portali, le civiltà galattiche si evolvono lungo i binari stabiliti dai Razziatori. Inoltre, i portali servono per accelerare il tasso al quale queste civiltà progrediscono, accorciando il tempo tra le mietiture dei Razziatori.
 
-                Tuttavia, i Prothean hanno avuto un forte interesse per i portali, e sono riusciti a rompere il segreto dietro il loro funzionamento. Ciò ha permesso loro di costruire il Condotto prima che fossero distrutti dai Razziatori.</p>
-            </article>
+                    Tuttavia, i Prothean hanno avuto un forte interesse per i portali, e sono riusciti a rompere il segreto dietro il loro funzionamento. Ciò ha permesso loro di costruire il Condotto prima che fossero distrutti dai Razziatori.</p>
+                </div>
+              </article>
+            </section>
 
-            <nav class="panel-footer">
-              <ul class="pager">
-                <li><a href="blog.html">Pagina precedente</a></li>
-              </ul>
-            </nav>
+            <aside class="col-sm-3">
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4>Cerchi qualcosa?</h4>
+                </div>
+
+                <form class="panel-body" action="ricerca.html">
+                    <label for="blogsearch">Digitalo qui : </label> 
+                    <input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
+                  </form>
+              </div>
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h4>Archivio</h4>
+                </div>
+                <div class="list-group">
+                  <a class="list-group-item" href="gen.html">Gennaio 2018</a>
+                  <a class="list-group-item" href="dic.html">Dicembre 2017</a>
+                  <a class="list-group-item" href="nov.html">Novembre 2017</a>
+                </div>
+              </div>
+            </aside>
+
           </div>
-        </section>
-
-        <aside class="col-sm-3">
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4>Cerchi qualcosa?</h4>
-            </div>
-
-            <form class="panel-body" action="ricerca.html">
-                <label for="blogsearch">Digitalo qui : </label> 
-                <input id="blogsearch" class="form-control" type="search" placeholder="Cerca...">
-              </form>
-          </div>
-          <div class="panel panel-default">
-            <div class="panel-heading">
-              <h4>Archivio</h4>
-            </div>
-            <div class="list-group">
-              <a class="list-group-item" href="gen.html">Gennaio 2018</a>
-              <a class="list-group-item" href="dic.html">Dicembre 2017</a>
-              <a class="list-group-item" href="nov.html">Novembre 2017</a>
-            </div>
-          </div>
-        </aside>
-
+        </div>
+        
+        <nav class="panel-footer">
+          <ul class="pager">
+            <li><a href="blog.html">Pagina precedente</a></li>
+          </ul>
+        </nav>
       </div>
     </main>
 
