--- a/storia.html
+++ b/storia.html
@@ -19,181 +19,175 @@
 
 	<body>
 
-    <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Shroom Space Ind.</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <!-- vuoto, è tutto a destra -->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <!-- Esperienze -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Missione circumlunare</a>
-                  </li>
-                  <li>
-                    <a href="#">Volo a gravità zero</a>
-                  </li>
-                  <li>
-                    <a href="#">Addestramento da astronauta</a>
-                  </li>
-                  <li>
-                    <a href="#">Visita la stazione spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Altre esperienze</li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Scopri le nostre tecnologie</a>
-                  </li>
-                  <li>
-                    <a href="#">Sicurezza</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- News ed Eventi -->
-              <li>
-                <a href="#about">News ed Eventi</a>
-              </li>
-              <!-- Blog -->
-              <li>
-                <a href="blog.html">Blog</a>
-              </li>
-              <!-- Multimedia -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="foto.html">Foto gallery</a>
-                  </li>
-                  <li>
-                    <a href="#">Video gallery</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Partners -->
-              <li>
-                <a href="partners.html">Partners</a>
-              </li>
-              <!-- Chi siamo -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="vision.html">Vision</a>
-                  </li>
-                  <li>
-                    <a href="#">Storia</a>
-                  </li>
-                  <li>
-                    <a href="#">Il Team</a>
-                  </li>
-                  <li>
-                    <a href="#">Opportunità lavorative</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Contattaci -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="scrivici.html">Scrivici</a>
-                  </li>
-                  <li>
-                    <a href="#">Dove trovarci</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Ricerca -->
-              <li>
-                <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-              </li>
-              <!-- Login form -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                  <span class="caret"></span>
-                </a>
-                <ul id="login-dp" class="dropdown-menu">
-                  <li>
-                    <div class="row">
-                      <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                          <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                          <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                        </div>
-                        <div class="form-group">
-                          <label class="sr-only" for="loginPassword">Password</label>
-                          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                          <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                        </div>
-                        <div>
-                          <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                          <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                        </div>
-                        <hr>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Resta collegato
-                          </label>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="bottom text-center">
-                      Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
         </div>
-      </nav>
-    </header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!-- vuoto, è tutto a destra -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Esperienze -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Missione circumlunare</a>
+                </li>
+                <li>
+                  <a href="#">Volo a gravità zero</a>
+                </li>
+                <li>
+                  <a href="#">Addestramento da astronauta</a>
+                </li>
+                <li>
+                  <a href="#">Visita la stazione spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Altre esperienze</li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Scopri le nostre tecnologie</a>
+                </li>
+                <li>
+                  <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
+            <!-- News ed Eventi -->
+            <li>
+              <a href="#about">News ed Eventi</a>
+            </li>
+            <!-- Blog -->
+            <li>
+              <a href="blog.html">Blog</a>
+            </li>
+            <!-- Multimedia -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="foto.html">Foto gallery</a>
+                </li>
+                <li>
+                  <a href="#">Video gallery</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Partners -->
+            <li>
+              <a href="partners.html">Partners</a>
+            </li>
+            <!-- Chi siamo -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="vision.html">Vision</a>
+                </li>
+                <li>
+                  <a href="#">Storia</a>
+                </li>
+                <li>
+                  <a href="#">Il Team</a>
+                </li>
+                <li>
+                  <a href="#">Opportunità lavorative</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Contattaci -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="scrivici.html">Scrivici</a>
+                </li>
+                <li>
+                  <a href="#">Dove trovarci</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+            </li>
+            <!-- Login form -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <span class="caret"></span>
+              </a>
+              <ul id="login-dp" class="dropdown-menu">
+                <li>
+                  <div class="row">
+                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
+                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
+                      </div>
+                      <div>
+                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
+                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
+                      </div>
+                      <hr>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Resta collegato
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-		<section>
-            <div class="container">
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li>Storia</li>
-                </ol>
-                <div class="jumbotron">
-                    <div class="container">
-                    	<h1>La nostra storia</h1>
-                    	<br>
-                        <p>Fondato nel 1977 da Rob Doc Jr., Shroom Space Ind. è leader mondiale nel settore di voli spaziali privati. Grazie alle tecnologie all'avanguardia progettate dai nostri ingegneri e alla perfetta coordinazione dei nostri team, siamo riusciti a produrre servizi unici e innovativi che ci hanno permesso di sbaragliare la concorrenza sotto ogni aspetto.</p>
-                        <p>I nostri clienti hanno speso complessivamente circa cinque mesi nello spazio e hanno viaggiato per oltre 42 milioni di miglia, con un aumento del 30% delle richieste di volo nell'ultimo decennio.</p>
-                        <p>Se hai domande non esitare a contattarci o continua a guardare le nostre esperienze.</p>
-                    </div>
-                </div>
-            </div>
-		</section>
+		<main class="container">
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li>Storia</li>
+      </ol>
+      <div class="jumbotron">
+          <h1>La nostra storia</h1>
+          <hr>
+          <p>Fondato nel 1977 da Rob Doc Jr., Shroom Space Ind. è leader mondiale nel settore di voli spaziali privati. Grazie alle tecnologie all'avanguardia progettate dai nostri ingegneri e alla perfetta coordinazione dei nostri team, siamo riusciti a produrre servizi unici e innovativi che ci hanno permesso di sbaragliare la concorrenza sotto ogni aspetto.</p>
+          <p>I nostri clienti hanno speso complessivamente circa cinque mesi nello spazio e hanno viaggiato per oltre 42 milioni di miglia, con un aumento del 30% delle richieste di volo nell'ultimo decennio.</p>
+          <p>Se hai domande non esitare a contattarci o continua a guardare le nostre esperienze.</p>
+      </div>
+		</main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
