--- a/vision.html
+++ b/vision.html
@@ -19,186 +19,194 @@
 
 	<body>
 
-    <header>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
-            aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Shroom Space Ind.</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <!-- vuoto, è tutto a destra -->
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <!-- Esperienze -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Missione circumlunare</a>
-                  </li>
-                  <li>
-                    <a href="#">Volo a gravità zero</a>
-                  </li>
-                  <li>
-                    <a href="#">Addestramento da astronauta</a>
-                  </li>
-                  <li>
-                    <a href="#">Visita la stazione spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Altre esperienze</li>
-                  <li>
-                    <a href="#">Assisti ad un lancio spaziale</a>
-                  </li>
-                  <li>
-                    <a href="#">Scopri le nostre tecnologie</a>
-                  </li>
-                  <li>
-                    <a href="#">Sicurezza</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- News ed Eventi -->
-              <li>
-                <a href="#about">News ed Eventi</a>
-              </li>
-              <!-- Blog -->
-              <li>
-                <a href="blog.html">Blog</a>
-              </li>
-              <!-- Multimedia -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="foto.html">Foto gallery</a>
-                  </li>
-                  <li>
-                    <a href="#">Video gallery</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Partners -->
-              <li>
-                <a href="partners.html">Partners</a>
-              </li>
-              <!-- Chi siamo -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="#">Vision</a>
-                  </li>
-                  <li>
-                    <a href="#">Storia</a>
-                  </li>
-                  <li>
-                    <a href="#">Il Team</a>
-                  </li>
-                  <li>
-                    <a href="#">Opportunità lavorative</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Contattaci -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
-                  <span class="caret"></span>
-                </a>
-                <ul class="dropdown-menu">
-                  <li>
-                    <a href="scrivici.html">Scrivici</a>
-                  </li>
-                  <li>
-                    <a href="#">Dove trovarci</a>
-                  </li>
-                </ul>
-              </li>
-              <!-- Ricerca -->
-              <li>
-                <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
-              </li>
-              <!-- Login form -->
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
-                  <span class="caret"></span>
-                </a>
-                <ul id="login-dp" class="dropdown-menu">
-                  <li>
-                    <div class="row">
-                      <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
-                        <div class="form-group">
-                          <label class="sr-only" for="loginEmail">Indirizzo email</label>
-                          <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
-                        </div>
-                        <div class="form-group">
-                          <label class="sr-only" for="loginPassword">Password</label>
-                          <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
-                          <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
-                        </div>
-                        <div>
-                          <label class="sr-only" for="loginSubmit">Indirizzo email</label>
-                          <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
-                        </div>
-                        <hr>
-                        <div class="checkbox">
-                          <label>
-                            <input type="checkbox"> Resta collegato
-                          </label>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="bottom text-center">
-                      Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
-                    </div>
-                  </li>
-                </ul>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false"
+          aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Shroom Space Ind.</a>
         </div>
-      </nav>
-    </header>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            <!-- vuoto, è tutto a destra -->
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <!-- Esperienze -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Esperienze
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Missione circumlunare</a>
+                </li>
+                <li>
+                  <a href="#">Volo a gravità zero</a>
+                </li>
+                <li>
+                  <a href="#">Addestramento da astronauta</a>
+                </li>
+                <li>
+                  <a href="#">Visita la stazione spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li role="separator" class="divider"></li>
+                <li class="dropdown-header">Altre esperienze</li>
+                <li>
+                  <a href="#">Assisti ad un lancio spaziale</a>
+                </li>
+                <li>
+                  <a href="#">Scopri le nostre tecnologie</a>
+                </li>
+                <li>
+                  <a href="#">Sicurezza</a>
+                </li>
+              </ul>
+            </li>
+            <!-- News ed Eventi -->
+            <li>
+              <a href="#about">News ed Eventi</a>
+            </li>
+            <!-- Blog -->
+            <li>
+              <a href="blog.html">Blog</a>
+            </li>
+            <!-- Multimedia -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Multimedia
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="foto.html">Foto gallery</a>
+                </li>
+                <li>
+                  <a href="#">Video gallery</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Partners -->
+            <li>
+              <a href="partners.html">Partners</a>
+            </li>
+            <!-- Chi siamo -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Chi siamo
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="#">Vision</a>
+                </li>
+                <li>
+                  <a href="#">Storia</a>
+                </li>
+                <li>
+                  <a href="#">Il Team</a>
+                </li>
+                <li>
+                  <a href="#">Opportunità lavorative</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Contattaci -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contattaci
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a href="scrivici.html">Scrivici</a>
+                </li>
+                <li>
+                  <a href="#">Dove trovarci</a>
+                </li>
+              </ul>
+            </li>
+            <!-- Ricerca -->
+            <li>
+              <a href="ricercaglobale.html"><span class="glyphicon glyphicon-search" aria-hidden="true"></span> Ricerca</a>
+            </li>
+            <!-- Login form -->
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login
+                <span class="caret"></span>
+              </a>
+              <ul id="login-dp" class="dropdown-menu">
+                <li>
+                  <div class="row">
+                    <form class="navbar-form" role="form" method="get" action="indexlogged.html" accept-charset="UTF-8" id="login-nav">
+                      <div class="form-group">
+                        <label class="sr-only" for="loginEmail">Indirizzo email</label>
+                        <input type="email" class="form-control" id="loginEmail" placeholder="Indirizzo email" required>
+                      </div>
+                      <div class="form-group">
+                        <label class="sr-only" for="loginPassword">Password</label>
+                        <input type="password" class="form-control" id="loginPassword" placeholder="Password" required>
+                        <div class="help-block text-right"><a href="">Non ricordi la password?</a></div>
+                      </div>
+                      <div>
+                        <label class="sr-only" for="loginSubmit">Indirizzo email</label>
+                        <input type="submit" class="btn btn-primary btn-block" id="loginSubmit" value="Vai!">
+                      </div>
+                      <hr>
+                      <div class="checkbox">
+                        <label>
+                          <input type="checkbox"> Resta collegato
+                        </label>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="bottom text-center">
+                    Nuovo? <a href="registrazione.html"><b>Registrati!</b></a>
+                  </div>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-		<section>
-            <div class="container">
-                <ol class="breadcrumb">
-                    <li><a href="index.html">Home</a></li>
-                    <li>Vision</li>
-                </ol>
-                <div class="jumbotron">
-                    <div class="container">
-                        <h1>Visione aziendale</h1>
-                        <blockquote class="blockquote-reverse">
-                            <p>There is only Passion.</p>
-                            <p> Through Passion I gain Strength.</p>
-                            <p>Through Strength I gain Power.</p>
-                            <p>Through Power I gain Victory.</p>
-                            <p>Through Victory my chains are Broken.</p>
-                            <p>The Force shall free me.</p>
-                            <footer>DOC, Shroom Space Industries CEO</footer>
-                        </blockquote>
-                    </div>
-                </div>
-            </div>
-		</section>
+		<main class="container">
+      <ol class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li>Vision</li>
+      </ol>
+      <div class="panel panel-default">
+        <div class="panel-heading jumbotron">
+          <h1>Visione aziendale</h1>
+          <blockquote class="blockquote-reverse">
+              <p>There is only Passion.</p>
+              <p> Through Passion I gain Strength.</p>
+              <p>Through Strength I gain Power.</p>
+              <p>Through Power I gain Victory.</p>
+              <p>Through Victory my chains are Broken.</p>
+              <p>The Force shall free me.</p>
+              <footer>DOC, Shroom Space Industries CEO</footer>
+          </blockquote>
+        </div>
+        <div class="panel-body">
+          <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vel facilis veniam expedita non cumque fugiat quam modi cupiditate est aut, officia minus, quis qui repellendus ab itaque sed, cum eos ipsa. Provident, dolorum porro. Dicta vitae, optio blanditiis recusandae quos vero quisquam tenetur mollitia corrupti voluptas reprehenderit aliquam laboriosam aut excepturi dolores saepe? Dignissimos minima deleniti perspiciatis atque, consequatur quibusdam, quisquam dicta repellat provident maiores aliquam. Error sequi animi totam illo corporis accusamus expedita iusto aliquam neque sunt ipsa quibusdam, unde excepturi nihil, maxime in repellat inventore est officia obcaecati. Debitis ipsam natus, nulla fuga nostrum similique architecto neque!
+          </blockquote>
+          <blockquote class="blockquote-reverse">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio, in est! Voluptatibus delectus culpa similique illum molestiae nam dolorem molestias officiis provident corporis exercitationem blanditiis voluptas quaerat tempora adipisci, nostrum repellendus harum expedita asperiores praesentium incidunt. Quibusdam amet aliquid quidem quasi quas dolores numquam voluptatem dolorum iusto. Eaque sint dolor aperiam culpa cupiditate alias ex commodi. Nam, ducimus officia! Quam excepturi optio vel qui debitis amet ipsam fuga beatae natus quis, earum esse deserunt unde tempora expedita delectus voluptatem minus adipisci, sapiente a dolore nulla veniam distinctio. Mollitia fugit possimus quibusdam ratione tenetur aliquid provident unde inventore reiciendis velit odit voluptate eum sunt, nisi, veniam obcaecati iste. Eos, earum quis atque iusto accusamus id provident sunt maiores! Officia dolores, non voluptatibus nostrum ipsa expedita autem?
+          </blockquote>
+          <blockquote>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit adipisci, et quod deserunt beatae dolore quibusdam, rerum eum, vel ex expedita accusamus aperiam rem modi eveniet quis dolorem! Deserunt quis sit voluptate eos soluta doloremque? Error aut facilis nostrum doloremque eveniet molestias earum asperiores repellendus velit sint quia commodi, perspiciatis eius cumque quos aperiam excepturi nisi reiciendis similique delectus ipsa exercitationem repudiandae debitis. Ad sunt officiis laboriosam placeat nobis repellendus nostrum aut facilis. Quas laborum placeat architecto corporis, dicta unde voluptatem, nostrum quam excepturi fugit sunt magni eveniet illo amet?
+          </blockquote>
+          
+        </div>
+      </div>
+		</main>
 
 		<footer class="footer">
 			<nav class="navbar-inverse">
